FIX: z-index issues

--- a/public/global.css
+++ b/public/global.css
@@ -32,6 +32,8 @@
   --onboard-wallet-button-border-color: var(--border-color);
   --onboard-wallet-app-icon-border-color: var(--border-color);
   --onboard-wallet-button-background-hover: var(--item-hover);
+
+  --onboard-modal-z-index: 999999;
 }
 
 .link{
